--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-#Secret databases
-/databases/*.db
+#Secret databases- Remove the # later
+#/databases/*.db
 
 # dependencies
 /node_modules
