--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/language": "^5.2.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "googleapis": "^118.0.0",
     "next": "^13.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
