--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@google-cloud/language": "^5.2.2",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "googleapis": "^118.0.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "^13.4.2",
+    "next-auth": "^4.22.1",
+    "next-iron-session": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
