--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.3.0",
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
+    "mona-sans": "^1.0.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "next-iron-session": "^4.2.0",
