--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "googleapis": "^118.0.0",
